--- a/graphics.html
+++ b/graphics.html
@@ -11,10 +11,11 @@ image:
   - /img/portfolio/graphics/sga shirt port.jpg
 
 image-alt:
-  - 'business card'
-  - 'IMG-2188'
-  - 'IMG-2199'
-  - 'IMG-2208'
-  - 'ru shirt copy'
-  - 'sga shirt port'
+  - 'save the date'
+  - 'graduation announcement'
+  - 'graduation announcement'
+  - 'wedding invite'
+  - 'wedding design'
+  - 'ru shirt design'
+  - 'sga shirt design'
 ---
