--- a/graphics.html
+++ b/graphics.html
@@ -2,20 +2,18 @@
 layout: portfolio
 currentTab: graphics
 image: 
-  - /img/portfolio/graphics/save.jpg
-  - /img/portfolio/graphics/gregGrad.jpg
-  - /img/portfolio/graphics/brittniGrad.jpg
+  - /img/portfolio/graphics/Bridal_bunch.jpg
   - /img/portfolio/graphics/IMG_7180.jpg
   - /img/portfolio/graphics/IMG_7196.jpg
   - /img/portfolio/graphics/ru shirt copy.jpg
-  - /img/portfolio/graphics/sga shirt port.jpg
+  - /img/portfolio/graphics/save.jpg
+  - /img/portfolio/graphics/gregGrad.jpg
 
 image-alt:
-  - 'save the date'
-  - 'graduation announcement'
-  - 'graduation announcement'
+  - 'bridal shower graphic'
   - 'wedding invite'
   - 'wedding design'
   - 'ru shirt design'
-  - 'sga shirt design'
+  - 'save the date'
+  - 'graduation announcement'
 ---
