--- a/index.html
+++ b/index.html
@@ -1,15 +1,36 @@
 ---
-navName: home
-layout: default
+layout: portfolio
+currentTab: interiorDesign
+image: 
+  - /img/portfolio/interiorDesign/birthing-center-boards-final1-1.jpg
+  - /img/portfolio/interiorDesign/birthing-center-boards-final1-2.jpg
+  - /img/portfolio/interiorDesign/t31.jpg
+  - /img/portfolio/interiorDesign/t32.jpg
+  - /img/portfolio/interiorDesign/REDO-Board_Page_1.jpg
+  - /img/portfolio/interiorDesign/REDO-Board_Page_2.jpg
+  - /img/portfolio/interiorDesign/REDO-Board_Page_3.jpg
+  - /img/portfolio/interiorDesign/1.jpg
+  - /img/portfolio/interiorDesign/2.jpg
+  - /img/portfolio/interiorDesign/bridal suit.jpg
+  - /img/portfolio/interiorDesign/groom suit.jpg
+  - /img/portfolio/interiorDesign/portfolio-4.jpg
+  - /img/portfolio/interiorDesign/va6.jpg
+  - /img/portfolio/interiorDesign/img03623.jpg
+image-alt:
+- '1'
+- '2'
+- '3'
+- '4'
+- '5'
+- '6'
+- '7'
+- '8'
+- '9'
+- '10'
+- '11'
+- '12'
+- '13'
+- '14'
 ---
-
-<div class="row">
-	<div class="col-md-12">
-		<img id="homeImg" src="{{site.baseurl}}/img/websiteHome.jpg" usemap="#homeMap">
-		<!--<map name="homeMap">
-			<area shape="rect" coords="50,80,220,340" href="#" alt="sdfsdf">
-		</map>-->
-	</div>
-</div>
 
 
